# Compiler

./: CMakeLists.txt  Test.txt  Test_result.txt  Tokenizator_result.txt  debug_log.h  errors_warning.cpp  errors_warning.h  main.cpp
Compiler/: Compiler.cpp  Compiler.h  Language.cpp  Language.h
Compiler/Checker/: Checker.cpp  Checker.h
Compiler/Logic/: Logic.cpp  Logic.h
Compiler/Tokenizator/: Tokenizator.cpp  Tokenizator.h
